# QuickReceipt_clean

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  app.py  gmail_auth.py  pyproject.toml  replit.md  requirements-github.txt  telegram_bot.py  utils (copy).py
secrets/: credentials.json
static/css/: style.css
static/js/: script.js
templates/: index.html
